# CAOS_MillDEM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  STRUCTURE.md  VERSION  pyproject.toml  requirements-jit.txt  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: VALIDATION.md
examples/: validate.py
manuscripts/mill-power-note/data/: validation_sweep.json
manuscripts/mill-power-note/figures/: make_figs.py  validation_sweep.py
manuscripts/mill-power-note/tex/: main.tex
milldem/: __init__.py  __main__.py  cli.py  contact.py  engine.py  engine3d.py  metrics.py
milldem/__pycache__/: engine._resolve_contacts-68.py313.1.nbc  engine._resolve_contacts-68.py313.nbi  engine._resolve_contacts-70.py313.1.nbc  engine._resolve_contacts-70.py313.nbi
tests/: test_contact.py  test_engine.py  test_power3d.py
