[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milldem"
version = "0.1.0"
description = "Cross-platform 2D soft-sphere DEM engine for tumbling-mill charge motion and power (no C++/WSL)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibanez-Leal" }]
keywords = ["DEM", "discrete element method", "tumbling mill", "SAG", "ball mill", "comminution", "charge motion", "mineral processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=2.0,<2.3",
  "scipy>=1.13",
]

[project.optional-dependencies]
jit = ["numba>=0.61"]
train = ["numba>=0.61", "torch-geometric>=2.5", "matplotlib>=3.8", "tqdm>=4.66"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[project.scripts]
milldem = "milldem.cli:main"

[project.urls]
Homepage = "https://github.com/fsantibanezleal/CAOS_MillDEM"
Repository = "https://github.com/fsantibanezleal/CAOS_MillDEM"

[tool.hatch.build.targets.wheel]
packages = ["milldem"]
