[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milldem"
version = "0.03.001"
description = "Cross-platform soft-sphere DEM for tumbling-mill charge motion and power (2D charge shape + thin-3D-slab power validated vs Hogg-Fuerstenau; no C++/WSL)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibanez-Leal" }]
keywords = ["DEM", "discrete element method", "tumbling mill", "SAG", "ball mill", "comminution", "charge motion", "mineral processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=2.0,<2.3",
  "scipy>=1.13",
]

[project.optional-dependencies]
jit = ["numba>=0.61"]
train = ["numba>=0.61", "torch-geometric>=2.5", "matplotlib>=3.8", "tqdm>=4.66"]
dev = ["pytest>=8.0", "matplotlib>=3.8", "build>=1.0"]

[project.scripts]
milldem = "milldem.cli:main"

[project.urls]
Homepage = "https://github.com/fsantibanezleal/CAOS_MillDEM"
Repository = "https://github.com/fsantibanezleal/CAOS_MillDEM"
Changelog = "https://github.com/fsantibanezleal/CAOS_MillDEM/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["milldem"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
# version is static above (X.XX.XXX display form == PEP 440 0.1.0-compatible: 0.01.000 normalizes to 0.1.0)
